--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
     // PWA起動時は物件一覧へリダイレクト（パス修正）
     if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) {
-      window.location.replace('./html_files/main_app/property_select.html');
+      window.location.href = './html_files/main_app/property_select.html';
     }
   </script>
 </head>
