--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         });
       }
     }
-    // PWA起動時は物件一覧へリダイレクト（パス修正）
+    // PWA起動時は物件一覧へリダイレクト（Vercel URL）
     if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) {
-      window.location.href = './html_files/main_app/property_select.html';
+      window.location.href = 'https://daishin-kaihatu-project.vercel.app/property_select.html';
     }
   </script>
 </head>
