--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
         });
       }
     }
-    // PWA起動時は物件一覧へリダイレクト（ワンタイムチェック）
-    if ((window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) 
-        && !sessionStorage.getItem('pwa_redirected')) {
-      sessionStorage.setItem('pwa_redirected', 'true');
+    // PWA起動時は物件一覧へリダイレクト
+    if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) {
       window.location.href = './property_select.html';
     }
   </script>
