--- a/html_files/main_app/property_select.html
+++ b/html_files/main_app/property_select.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <title>物件選択 - 水道メーター読み取りアプリ</title>
   <meta charset="utf-8">
-  <title>あ</title>
-</head>
-<body>
-  あ
-</body>
-</html>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- キャッシュコントロール メタタグ -->
