Fix Vercel routing configuration and 404 errors
- Update vercel.json to use proper rewrites syntax
- Remove conflicting routes configuration
- Fix PWA redirect paths to use absolute URLs
- Add index page start button for manual navigation
- Update service worker cache to include index.html
- Improve routing for property_select, room_select, meter_reading paths

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
     // PWA起動時は物件一覧へリダイレクト
     if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) {
-      window.location.href = './property_select.html';
+      window.location.href = '/property_select';
     }
   </script>
 </head>
@@ -44,6 +44,8 @@
     <h1>水道検針アプリ</h1>
     <p>このアプリはPWAとしてインストールできます。</p>
     <button id="install-btn" style="display:none;" onclick="installPWA()">PWAをインストール</button>
+    <br><br>
+    <button onclick="window.location.href='/property_select'" style="padding: 12px 24px; background-color: #1976d2; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 16px;">アプリを開始</button>
   </div>
   <script>
     // サービスワーカー登録
