--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>水道検針アプリ</h1>
+    <h1>水道検針アプリaaaaa</h1>
     <p>このアプリはPWAとしてインストールできます。</p>
     <button id="install-btn" style="display:none;" onclick="installPWA()">PWAをインストール</button>
     <br><br>
