--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -73,14 +73,15 @@
     </main>
 
 <script>
-        // 🚀 Room Select App v20250830f - JavaScript構文エラー修正版 + Cache+Light API+Preload最適化版
-        console.log('🚀 Room Select App v20250830f - JavaScript構文エラー修正版');
+        // 🚀 Room Select App v20250830g - JavaScript構文エラー修正完了版 + 安定動作版
+        console.log('🚀 Room Select App v20250830g - JavaScript構文エラー修正完了版');
         console.log('🔧 SessionStorage継続: property_select.htmlからの高速遷移対応');
         console.log('🔧 キャッシュ機能統合: LocalStorage + 差分更新対応');
-        console.log('🔧 軽量API使用: getRoomsLight');
+        console.log('🔧 API統一: getRooms従来API使用（安定動作）');
         console.log('🔧 プリロード機能: メーター読み取りデータ事前取得');
-        console.log('🔧 パフォーマンス向上: 50-70%データ削減 + 即座表示');
+        console.log('🔧 パフォーマンス向上: キャッシュシステム + 即座表示');
         console.log('🛠️ 修正: gasWebAppUrl変数スコープ問題解決');
+        console.log('🛡️ 強化: リトライ機能 + ユーザーフレンドリーエラーメッセージ');
         
         // キャッシュ統計情報の表示
         if (window.pwaUtils) {
