--- a/room_select.html
+++ b/room_select.html
@@ -37,6 +37,9 @@
     <!-- Navigation Fix Test Suite -->
     <script src="/navigation-fix-test.js"></script>
     
+    <!-- Character Encoding Fix Test -->
+    <script src="/encoding-fix-test.js"></script>
+    
     <!-- Force Refresh Validation Test (開発用) -->
     <script src="/force-refresh-validation-test.js"></script>
 </head>
